Fix sidepanel toolbar overflow spacing

--- a/packages/jupyter-chat/style/chat.css
+++ b/packages/jupyter-chat/style/chat.css
@@ -147,8 +147,8 @@
 .jp-chat-sidepanel-widget-toolbar > .jp-chat-sidepanel-widget-title {
   display: block;
   align-content: center;
-  flex: 1 1 0%;
-  max-width: calc(100% - 7rem);
+  flex: 0 1 auto;
+  max-width: 16em;
   min-width: 0;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -157,9 +157,4 @@
   color: var(--jp-ui-font-color1);
   font-size: var(--jp-ui-font-size0);
   font-weight: bold;
-}
-
-.jp-chat-sidepanel-widget-toolbar
-  > .jp-Toolbar-item.jp-ToolbarButton:first-of-type {
-  margin-left: auto;
 }
